2013-03-03  Andy Buckley  <andy.buckley@cern.ch>

	* Remove -ansi from the compiler setup (the long long in some
	yaml-cpp versions is causing trouble, at least on Macs with gcc
	4.2)

2013-03-02  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an example script for using the Python wrapper, and
	improving/fixing the mkPDF mapping.

2013-03-01  Andy Buckley  <andy.buckley@cern.ch>

	* Some LHAGlue fixes and improvements.

	* Fixing environment variable updating for path handling.

	* Adding Cython docstrings and path/version functions.

	* Integrating the Cython extension build into the autotools build/install.

	* Path handling and PDF data file search error reporting fixes/improvements.

	* Add a fallback to use LHAPATH if LHAPDF_DATA_PATH is undefined. (pre-deprecated?)

	* Re-enabling Cython mapping (only the basic functionality subset).

	* Adding LHAPDF::version() function.

	* Adding configure testing for -mt versions of Boost (file)system libs.

2013-02-28  Andy Buckley  <andy.buckley@cern.ch>

	* Adding name+member and LHAPDF ID constructors for Info.

	* Moving config() out of Info.

2013-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* Implemented PDF::setname() and PDF::memberid().

2013-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a lhapdf-config build assistant script.

	* Adding hacky first implementations of log-space interpolators. Separation of x and Q2 ipol seems ever more likely.

	* Started work on new LaTeX manual/paper, based on previous contribution from Ben and Marek.

	* Cleaning up defunct wrappers directories.

	* Fixing a bug in handling of nearest knot lookup for underflow x/Q2 requests.

2013-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding installation and usage instructions to the Doxy manual.

2013-02-13  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing install path data lookup to include the 'LHAPDF' part.

	* Fixed use of interpolation up to the last knot (in Q2, at least)